native/desktop-macos/headers/desktop_macos.h

typedef struct ApplicationConfig {
  bool disable_dictation_menu_item;
  bool disable_character_palette_menu_item;
} ApplicationConfig;
typedef bool (*EventHandler)(const struct Event*);
typedef bool (*TextOperationHandler)(const struct TextOperation*);
typedef struct ApplicationCallbacks {
  bool (*on_should_terminate)(void);
  void (*on_will_terminate)(void);
  EventHandler event_handler;
  TextOperationHandler text_operation_handler;
} ApplicationCallbacks;
typedef void *MetalDeviceRef;
bool dispatcher_is_main_thread(void);
void dispatcher_main_exec_async(void (*f)(void));
void application_init(const struct ApplicationConfig *config,
                      struct ApplicationCallbacks callbacks);
void application_shutdown(void);
void application_run_event_loop(void);
void application_stop_event_loop(void);
void application_request_termination(void);
MetalDeviceRef metal_create_device(void);