kotlin-desktop-toolkit/src/main/java/org/jetbrains/desktop/macos/generated/desktop_macos_h.java


    /**
     * {@snippet lang=c :
     * bool dispatcher_is_main_thread()
     * }
     */
    public static boolean dispatcher_is_main_thread() {
        var mh$ = dispatcher_is_main_thread.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("dispatcher_is_main_thread");
            }
            return (boolean)mh$.invokeExact();
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class dispatcher_main_exec_async {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            desktop_macos_h.C_POINTER
        );

        public static final MemorySegment ADDR = desktop_macos_h.findOrThrow("dispatcher_main_exec_async");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void dispatcher_main_exec_async(void (*f)(void))
     * }
     */
    public static FunctionDescriptor dispatcher_main_exec_async$descriptor() {
        return dispatcher_main_exec_async.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void dispatcher_main_exec_async(void (*f)(void))
     * }
     */
    public static MethodHandle dispatcher_main_exec_async$handle() {
        return dispatcher_main_exec_async.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void dispatcher_main_exec_async(void (*f)(void))
     * }
     */
    public static MemorySegment dispatcher_main_exec_async$address() {
        return dispatcher_main_exec_async.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void dispatcher_main_exec_async(void (*f)(void))
     * }
     */
    public static void dispatcher_main_exec_async(MemorySegment f) {
        var mh$ = dispatcher_main_exec_async.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("dispatcher_main_exec_async", f);
            }
            mh$.invokeExact(f);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class application_init {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            desktop_macos_h.C_POINTER,
            ApplicationCallbacks.layout()
        );

        public static final MemorySegment ADDR = desktop_macos_h.findOrThrow("application_init");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void application_init(const struct ApplicationConfig *config, struct ApplicationCallbacks callbacks)
     * }
     */
    public static FunctionDescriptor application_init$descriptor() {
        return application_init.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void application_init(const struct ApplicationConfig *config, struct ApplicationCallbacks callbacks)
     * }
     */
    public static MethodHandle application_init$handle() {
        return application_init.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void application_init(const struct ApplicationConfig *config, struct ApplicationCallbacks callbacks)
     * }
     */
    public static MemorySegment application_init$address() {
        return application_init.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void application_init(const struct ApplicationConfig *config, struct ApplicationCallbacks callbacks)
     * }
     */
    public static void application_init(MemorySegment config, MemorySegment callbacks) {
        var mh$ = application_init.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("application_init", config, callbacks);
            }
            mh$.invokeExact(config, callbacks);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class application_shutdown {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(    );

        public static final MemorySegment ADDR = desktop_macos_h.findOrThrow("application_shutdown");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void application_shutdown()
     * }
     */
    public static FunctionDescriptor application_shutdown$descriptor() {
        return application_shutdown.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void application_shutdown()
     * }
     */
    public static MethodHandle application_shutdown$handle() {
        return application_shutdown.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void application_shutdown()
     * }
     */
    public static MemorySegment application_shutdown$address() {
        return application_shutdown.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void application_shutdown()
     * }
     */
    public static void application_shutdown() {
        var mh$ = application_shutdown.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("application_shutdown");
            }
            mh$.invokeExact();
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class application_run_event_loop {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(    );

        public static final MemorySegment ADDR = desktop_macos_h.findOrThrow("application_run_event_loop");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void application_run_event_loop()
     * }
     */
    public static FunctionDescriptor application_run_event_loop$descriptor() {
        return application_run_event_loop.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void application_run_event_loop()
     * }
     */
    public static MethodHandle application_run_event_loop$handle() {
        return application_run_event_loop.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void application_run_event_loop()
     * }
     */
    public static MemorySegment application_run_event_loop$address() {
        return application_run_event_loop.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void application_run_event_loop()
     * }
     */
    public static void application_run_event_loop() {
        var mh$ = application_run_event_loop.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("application_run_event_loop");
            }
            mh$.invokeExact();
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class application_stop_event_loop {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(    );

        public static final MemorySegment ADDR = desktop_macos_h.findOrThrow("application_stop_event_loop");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void application_stop_event_loop()
     * }
     */
    public static FunctionDescriptor application_stop_event_loop$descriptor() {
        return application_stop_event_loop.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void application_stop_event_loop()
     * }
     */
    public static MethodHandle application_stop_event_loop$handle() {
        return application_stop_event_loop.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void application_stop_event_loop()
     * }
     */
    public static MemorySegment application_stop_event_loop$address() {
        return application_stop_event_loop.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void application_stop_event_loop()
     * }
     */
    public static void application_stop_event_loop() {
        var mh$ = application_stop_event_loop.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("application_stop_event_loop");
            }
            mh$.invokeExact();
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class application_request_termination {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(    );

        public static final MemorySegment ADDR = desktop_macos_h.findOrThrow("application_request_termination");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void application_request_termination()
     * }
     */
    public static FunctionDescriptor application_request_termination$descriptor() {
        return application_request_termination.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void application_request_termination()
     * }
     */
    public static MethodHandle application_request_termination$handle() {
        return application_request_termination.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void application_request_termination()
     * }
     */
    public static MemorySegment application_request_termination$address() {
        return application_request_termination.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void application_request_termination()
     * }
     */
    public static void application_request_termination() {
        var mh$ = application_request_termination.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("application_request_termination");
            }
            mh$.invokeExact();
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class metal_create_device {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            desktop_macos_h.C_POINTER    );

        public static final MemorySegment ADDR = desktop_macos_h.findOrThrow("metal_create_device");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * MetalDeviceRef metal_create_device()
     * }
     */
    public static FunctionDescriptor metal_create_device$descriptor() {
        return metal_create_device.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * MetalDeviceRef metal_create_device()
     * }
     */
    public static MethodHandle metal_create_device$handle() {
        return metal_create_device.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * MetalDeviceRef metal_create_device()
     * }
     */
    public static MemorySegment metal_create_device$address() {
        return metal_create_device.ADDR;
    }

    /**
     * {@snippet lang=c :
     * MetalDeviceRef metal_create_device()
     * }
     */
    public static MemorySegment metal_create_device() {
        var mh$ = metal_create_device.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("metal_create_device");
            }
            return (MemorySegment)mh$.invokeExact();
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }
